crates/bsql/tests/compile_fail/comment_only.rs
fn main() {
    let _ = bsql::query!("-- just a comment");
}
