crates/bsql/tests/compile_fail/comment_only.stderr
error: unsupported statement type: ``. bsql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/comment_only.rs:2:13
  |
2 |     let _ = bsql::query!("-- just a comment");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
